docs/7.54/md/abensql_cast_rules.md
---
title: "Numeric Source Type"
description: |
  Source Type INT1, INT2, INT4, INT8, DEC, CURR, QUAN, DECFLOAT16, DDECFLOAT34 -   Numeric target type The possible target types are INT1, INT2, INT4, INT8, DEC, CURR, QUAN, DECFLOAT16, DECFLOAT34, and FLTP. -   The source value is converted to the internal representation for the target type. -   If t
version: "7.54"
category: "types"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abensql_cast_rules.htm"
abapFile: "abensql_cast_rules.htm"
keywords: ["do", "if", "case", "try", "class", "data", "types", "abensql", "cast", "rules"]
---

* * *

AS ABAP Release 754, ©Copyright 2019 SAP SE. All rights reserved.

[ABAP Keyword Documentation](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap.htm) →  [ABAP − Reference](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_reference.htm) →  [Processing External Data](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_language_external_data.htm) →  [ABAP Database Access](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenabap_sql.htm) →  [ABAP SQL](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenopensql.htm) →  [ABAP SQL - Operands and Expressions](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenopen_sql_operands.htm) →  [ABAP SQL - SQL Expressions sql\_exp](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abapsql_expr.htm) →  [sql\_exp - sql\_cast](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abensql_cast.htm) → 

sql\_exp - sql\_cast, Conversion Rules

The following sections describe the conversion rules for [cast expressions](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abensql_cast.htm) in ABAP SQL.

-   [Numeric Source Type](#abensql-cast-rules-1--------source-type-int1--int2--int4--int8--dec---@ITOC@@ABENSQL_CAST_RULES_2)

-   [Source Type DF16\_DEC, DF34\_DEC](#abensql-cast-rules-3--------character-like-source-type---@ITOC@@ABENSQL_CAST_RULES_4)

-   [Source Types CHAR, SSTRING](#abensql-cast-rules-5--------source-type-numc---@ITOC@@ABENSQL_CAST_RULES_6)

-   [Source Types DATS, TIMS, and CLNT](#abensql-cast-rules-7--------source-types-lang--unit--and-cuky---@ITOC@@ABENSQL_CAST_RULES_8)

Data types that cannot be converted to each other are not specified. In these cases, casts are either not possible or only casts between type-friendly operands. If the source type and the target type are technically identical, the content is transferred without being converted.

Numeric Source Type

Source Type INT1, INT2, INT4, INT8, DEC, CURR, QUAN, DECFLOAT16, DDECFLOAT34

-   Numeric target type

The possible target types are INT1, INT2, INT4, INT8, DEC, CURR, QUAN, DECFLOAT16, DECFLOAT34, and FLTP.

-   The source value is converted to the internal representation for the target type.

-   If the value range is exceeded, an exception is raised that can be caught using CX\_SY\_OPEN\_SQL\_DB. In the case of the target types DEC, CURR, and QUAN, this applies to the integer digits and any surplus decimal places are cut off without rounding.

-   In the case of the target type FLTP, values that cannot be represented as [binary floating point numbers](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenbinfloat_glosry.htm "Glossary Entry") are converted to the next adjacent number.

-   Character-like target type

The possible target types are CHAR and SSTRING.

-   The number value is converted to a character string in [mathematical notation](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenmathematical_notation_glosry.htm "Glossary Entry") without decimal separators and is left-aligned.

-   The length of the target type must be enough for all potential values including the sign.

-   In the case of the source types DECFLOAT16 and DECFLOAT34, [scientific notation](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenscientific_notation_glosry.htm "Glossary Entry") is produced from a specific value.

Note

When the source type DEC is converted to a character-like target type, the database specifies whether non-relevant zeros are displayed before and after the decimal separator.

Source Type DF16\_DEC, DF34\_DEC

-   Numeric target type

The possible target types are INT1, INT2, INT4, INT8, DECFLOAT16, and DECFLOAT34.

-   The source value is converted to the internal representation for the target type.

-   If the value range is exceeded, an exception is raised that can be caught using CX\_SY\_OPEN\_SQL\_DB.

Character-Like Source Type

Source Types CHAR, SSTRING

-   Character-like target type

The possible target types are CHAR, SSTRING, NUMC, DATS, TIMS, CLNT, LANG, UNIT, and CUKY.

-   The character string is written to the target field as a left-aligned string including leading blanks. If the target type is too short, it is truncated on the right and if the target field is too long, it is padded on the right with blanks.

-   There is no special handling for the special target type for numeric text, NUMC, and for the date/time types DATS and TIMS. It is advisable to only convert valid values.

Source Type NUMC

-   Numeric target type

The possible target types are INT1, INT2, INT4, INT8, DEC, CURR, QUAN, DECFLOAT16, DECFLOAT34, and FLTP.

-   The validity of the content of the source field is not checked, which means that there can be decimal places.

-   The source field must contain a character string that can be interpreted as a number. If not, an exception is raised that can be caught using CX\_SY\_OPEN\_SQL\_DB.

-   If the value range in the integer digits is exceeded, an exception is raised that can be caught using CX\_SY\_OPEN\_SQL\_DB.

-   In the case of the target types DECFLOAT16 and DECFLOAT34, rounding takes place to the last significant place.

-   In the case of the target types, INT1, INT2, and INT4, any decimal places in the source field raise an exception. In the case of the target types INT8, DEC, CURR, and QUAN, surplus decimal places are cut off without rounding.

-   In the case of the target type FLTP, values that cannot be represented as [binary floating point numbers](https://help.sap.com/doc/abapdocu_754_index_htm/7.54/en-US/abenbinfloat_glosry.htm "Glossary Entry") are converted to the next adjacent number.

-   Character-like target type

The possible target types are CHAR, SSTRING, NUMC, CLNT, DATS, and TIMS.

-   The validity of the source field is not checked.

-   The character string is written to the target field as a left-aligned string including leading blanks. If the target type is too short, it is truncated on the right and if the target field is too long, it is padded on the right with blanks.

-   There is no special handling for the special target type for numeric text, NUMC, and for the date/time types DATS and TIMS. It is advisable to only convert valid values.

Source Types DATS, TIMS, and CLNT

-   Character-like target types

The possible target types are CHAR, SSTRING, and NUMC.

-   The validity of the source field is not checked.

-   The character string is written to the target field as a left-aligned string including leading blanks. If the target type is too short, it is truncated on the right and if the target field is too long, it is padded on the right with blanks.

-   There is no special handling for the special target type for numeric text, NUMC. It is advisable to only convert valid values.

-   Date/time fields as target type (not for CLNT)

The possible target type for DATS is DATN and the possible target for TIMS is TIMN.

-   The value of the character-like date field or time field is converted to the internal value of the date type or time type.

-   The character-like date field or time field must contain a valid date or a valid time or the initial value. If not, an exception of the class CX\_SY\_OPEN\_SQL\_DB is raised.

Source Types LANG, UNIT, and CUKY

-   Character-like target types

The possible target types are CHAR and SSTRING.

-   The character string is written to the target field as a left-aligned string including leading blanks. If the target type is too short, it is truncated on the right and if the target field is too long, it is padded on the right with blanks.